[package]
name = "bptree"
version = "0.1.0"
edition = "2021"
authors = ["Amidamaru <thao@litheum.org>"]
description = "An on-disk B+Tree implementation in Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4"
uuid = {version = "1.3", features = ["serde", "v4"]}
memmap = "0.7"
